# rayray

./: CMakeLists.txt  test_scene.cfg
include/: Camera.hpp  Color.hpp  ILight.hpp  IMaterial.hpp  IObject.hpp  Ray.hpp  Scene.hpp  SceneConfig.hpp  vector.hpp
include/lights/: AmbientLight.hpp  DirectionalLight.hpp  PointLight.hpp
src/: SceneConfig.cpp  main.cpp  scene.cpp  vector.cpp
src/Materials/: BasicMaterial.cpp
src/Materials/include/: BasicMaterial.hpp
src/Objects/: CMakeLists.txt  planeObj.cpp  sphereObj.cpp
src/Objects/include/: PlaneObj.hpp  SphereObj.hpp
